Returned arenas to FFMAPI code